--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -6,6 +6,25 @@
     }
   },
   "Bot": {
-    "Token": ""
+    "Token": "HACKME"
+  },
+  "Lavalink": {
+    "RestUri": "http://localhost:2333",
+    "WebSocketUri": "ws://localhost:2333",
+    "Password": "youshallnotpass",
+    "AllowResume": true,
+    "ReconnectStrategy": {
+      "Type": "Linear",
+      "Delay": "00:00:10",
+      "MaxRetries": 3
+    },
+    "HttpClient": {
+      "Timeout": "00:00:30"
+    }
+  },
+  "KenobiAPI": {
+    "Enabled": true,
+    "ApiKey": "HACKMEHARDER",
+    "BaseUrl": "https://www.funckenobi42.space/api/file/createMusicStream"
   }
 }
