--- a/source/Properties/launchSettings.json
+++ b/source/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "ASimpleDiscordBotArchitectureTest": {
+    "PPMusicBot": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
