Add search engine logic

--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -26,5 +26,10 @@
     "Enabled": true,
     "ApiKey": "HACKMEHARDER",
     "BaseUrl": "https://www.funckenobi42.space/api/file/createMusicStream"
+    "SearchEngine": {
+      "LOW_THRESHOLD": 200,
+      "HIGH_THERSHHOLD": 800,
+      "MAX_SUGGESTIONS": 5
+    }
   }
 }
