--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -25,7 +25,7 @@
   "KenobiAPI": {
     "Enabled": true,
     "ApiKey": "HACKMEHARDER",
-    "BaseUrl": "https://www.funckenobi42.space/api/file/createMusicStream"
+    "BaseUrl": "https://www.funckenobi42.space/api/file/createMusicStream",
     "SearchEngine": {
       "LOW_THRESHOLD": 200,
       "HIGH_THERSHHOLD": 800,
