--- a/source/PPMusicBot.csproj
+++ b/source/PPMusicBot.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Discord.Net.WebSocket" Version="3.18.0" />
     <PackageReference Include="Lavalink4NET" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Abstractions" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.Artwork" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Protocol" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Rest" Version="4.0.27" />
