Fix a bug where it was possible to pass more than 25 options to the option menu. Implement proper config passing. Add some minor stuff.

--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -9,15 +9,9 @@
     "Token": "HACKME"
   },
   "Lavalink": {
-    "RestUri": "http://localhost:2333",
+    "BaseAddress": "http://localhost:2333",
     "WebSocketUri": "ws://localhost:2333",
-    "Password": "youshallnotpass",
-    "AllowResume": true,
-    "ReconnectStrategy": {
-      "Type": "Linear",
-      "Delay": "00:00:10",
-      "MaxRetries": 3
-    },
+    "Passphrase": "youshallnotpass",
     "HttpClient": {
       "Timeout": "00:00:30"
     }
