--- a/source/PPMusicBot.csproj
+++ b/source/PPMusicBot.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Lavalink4NET.Abstractions" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Artwork" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Protocol" Version="4.0.27" />
     <PackageReference Include="Lavalink4NET.Rest" Version="4.0.27" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
