--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -25,5 +25,8 @@
       "HIGH_THERSHHOLD": 800,
       "MAX_SUGGESTIONS": 5
     }
+  },
+  "Database": {
+    "ConnectionString": "Host=myserver;Username=mylogin;Password=mypass;Database=mydatabase"
   }
 }
