Make database service optional.

--- a/source/appsettings.json
+++ b/source/appsettings.json
@@ -27,6 +27,7 @@
     }
   },
   "Database": {
+    "IsEnabled": true,
     "ConnectionString": "Host=myserver;Username=mylogin;Password=mypass;Database=mydatabase"
   }
 }
